--- a/pages/birthday-cake-1.html
+++ b/pages/birthday-cake-1.html
@@ -167,18 +167,6 @@
       margin-bottom: 10px;
     }
 
-    .btn {
-      display: inline-block;
-      margin: 5px;
-      padding: 6px 12px;
-      background-color: #2b2825;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 4px;
-      font-size: 13px;
-      font-weight: bold;
-      cursor: pointer;
-    }
 
     .pagination {
       display: flex;
@@ -388,7 +376,7 @@
                   <h5 class="fw-semibold">$45.99</h5>
                   <button
                     class="btn btn-primary mt-2"
-                    onclick="window.location.href='birthday-cake-detail-1-logged.html'"
+                    onclick="window.location.href='birthday-cake-detail-1.html'"
                   >
                     Read More
                   </button>
@@ -589,12 +577,14 @@
     </div>
     <!-- Footer End -->
 
+
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
 
+    <!-- Script -->
     <script>
       const priceRange = document.getElementById("priceRange");
       const priceValue = document.getElementById("priceValue");
