--- a/pages/edit-info.html
+++ b/pages/edit-info.html
@@ -48,17 +48,6 @@
         }
 
 
-        .back-btn {
-            margin: 20px 0 0 80px;
-            padding: 6px 20px;
-            border: 1px solid #ff8c00;
-            color: #ff8c00;
-            background: white;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 14px;
-        }
-
         .main-content {
             display: flex;
             justify-content: flex-start;
@@ -161,18 +150,6 @@
             margin-bottom: 10px;
         }
 
-        .btn {
-            display: inline-block;
-            margin: 5px;
-            padding: 6px 12px;
-            background-color: #2b2825;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 4px;
-            font-size: 13px;
-            font-weight: bold;
-            cursor: pointer;
-        }
 
         .pagination {
             display: flex;
@@ -356,13 +333,10 @@
         <div class="edit-container">
             <div class="position-relative">
                 <!-- Nút Back -->
-                <a
-        href="javascript:history.back()"
-        class="btn btn-outline-primary position-absolute m-3"
-        style="top: -40px; left: -360px; z-index: 1000"
-      >
-        ← Back
-      </a>
+                <a href="javascript:history.back()" class="btn btn-outline-primary position-absolute m-3"
+                    style="top: -40px; left: -360px; z-index: 1000">
+                    ← Back
+                </a>
             </div>
             <div class="edit-wrapper">
                 <h2>Chỉnh Sửa Thông Tin Tài Khoản</h2>
@@ -511,11 +485,37 @@
     </div>
     <!-- Footer End -->
 
+
+    <!-- Popup cập nhật thông tin thành công -->
+    <div class="modal fade" id="paymentSuccess" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content text-center p-4">
+                <div class="modal-body">
+                    <i class="bi bi-check-circle-fill text-success" style="font-size: 4rem"></i>
+                    <h3 class="mt-3">Cập nhật thông tin thành công!</h3>
+                    <button type="button" class="btn btn-primary mt-3" data-bs-dismiss="modal">
+                        OK
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
+    <script>
+        document.querySelector("form").addEventListener("submit", function (e) {
+            e.preventDefault(); // Ngăn form reload trang
+            const modal = new bootstrap.Modal(document.getElementById("paymentSuccess"));
+            modal.show(); // Hiển thị popup
+        });
+    </script>
+
 
 
 </body>
